<resources>
    <string name="app_name">Beatuy Weather</string>

    <string name="weather_0">tornado</string>
    <string name="weather_1">tropical storm</string>
    <string name="weather_2">hurricane</string>
    <string name="weather_3">severe thunderstorms</string>
    <string name="weather_4">thunderstorms</string>
    <string name="weather_5">mixed rain and snow</string>
    <string name="weather_6">mixed rain and sleet</string>
    <string name="weather_7">mixed snow and sleet</string>
    <string name="weather_8">freezing drizzle</string>
    <string name="weather_9">drizzle</string>
    <string name="weather_10">freezing rain</string>
    <string name="weather_11">showers</string>
    <string name="weather_12">showers</string>
    <string name="weather_13">snow flurries</string>
    <string name="weather_14">light snow showers</string>
    <string name="weather_15">blowing snow</string>
    <string name="weather_16">snow</string>
    <string name="weather_17">hail</string>
    <string name="weather_18">sleet</string>
    <string name="weather_19">dust</string>
    <string name="weather_20">foggy</string>
    <string name="weather_21">haze</string>
    <string name="weather_22">smoky</string>
    <string name="weather_23">blustery</string>
    <string name="weather_24">windy</string>
    <string name="weather_25">cold</string>
    <string name="weather_26">cloudy</string>
    <string name="weather_27">mostly cloudy</string>
    <string name="weather_28">mostly cloudy</string>
    <string name="weather_29">partly cloudy</string>
    <string name="weather_30">partly cloudy</string>
    <string name="weather_31">clear</string>
    <string name="weather_32">sunny</string>
    <string name="weather_33">fair</string>
    <string name="weather_34">fair</string>
    <string name="weather_35">mixed rain and hail</string>
    <string name="weather_36">hot</string>
    <string name="weather_37">isolated thunderstorms</string>
    <string name="weather_38">thunderstorms</string>
    <string name="weather_39">scattered thunderstorms</string>
    <string name="weather_40">scattered showers</string>
    <string name="weather_41">heavy snow</string>
    <string name="weather_42">scattered snow showers</string>
    <string name="weather_43">heavy snow</string>
    <string name="weather_44">partly cloudy</string>
    <string name="weather_45">thundershowers</string>
    <string name="weather_46">snow showers</string>
    <string name="weather_47">isolated thundershowers</string>

    <string name="exit_tips">Press again to exit</string>
    <string name="location_success">Location Success</string>
    <string name="location_fail">Location Fail</string>
    <string name="location_going">Location...</string>

    <string name="setting">Setting</string>
    <string name="setting_city">City Manager</string>
    <string name="setting_notification">Enable notification</string>
    <string name="setting_feedback">Feed back</string>
    <string name="setting_about">About</string>
    <string name="city_manager">City Manager</string>
    <string name="city_add_bt">Add</string>
    <string name="city_remove">Remove</string>
    <string name="city_add_title">City Add</string>
    <string name="weather_updating">Weather updating...</string>
    <string name="about_us">About Us</string>
    <string name="search_city">Search City</string>
    <string name="hot_city">Hot City</string>
    <string name="handle_up_update">Loose to update</string>
    <string name="no_weather">Fail to get weather</string>

    <string name="publish_just_now">Just Now Publish</string>
    <string name="publish_minutes_ago">%d minutes ago publish</string>
    <string name="publish_hours_ago">%d hours ago publish</string>
    <string name="publish_time">%s publish</string>
    <string name="show_temper">%s°</string>
    <string name="no_network">No network</string>
    <string name="location">location</string>
    <string name="add_city_tips">add a city at least</string>
    <string name="have_added_tips">city has added</string>
    <string name="have_no_weather">Have no get weather</string>
</resources>
