<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/setting"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/city_setting"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/list_item_selector"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/setting_city"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#D1D1D1" />


    <RelativeLayout
        android:id="@+id/notification_setting"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/list_item_selector"
        android:paddingLeft="15dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/setting_notification"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/notification_cion_selector" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#D1D1D1" />


    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/list_item_selector"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/setting_feedback"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#D1D1D1" />


    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/list_item_selector"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/setting_about"
        android:textSize="18dp" />

</LinearLayout>