<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/addcity_background">

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:src="@drawable/arrow_left" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/arrow_left"
            android:paddingLeft="10dp"
            android:text="@string/city_add_title"
            android:layout_centerVertical="true"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </RelativeLayout>



    <EditText
        android:id="@+id/search_edit"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/search"
        android:background="@drawable/roundrect_search"

        android:gravity="center"
        android:textColor="#111111"
        android:textColorHint="#7F999999"
        android:hint="@string/search_city" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hot_city" />

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:numColumns="3"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ListView
            android:id="@+id/result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>
</LinearLayout>